crates/aven-check/tests/fixtures/check/valid/comptime-implicit-type-vars.av
Pair = { a: t, b: t }
pair : Pair = { a: 1, b: 1 }
