crates/aven-check/tests/fixtures/check/invalid/redundant-undefined-field.av
obj = { x: 1 }
spread = { ..obj, x: undefined }
fresh = { x: undefined }
